# cpp

./: CMakeLists.txt
src/: array.cpp  capitalizeEachWords.cpp  functions.hpp  functions.hxx  header.hxx  input.cpp  main.cpp  math.cpp  random.cpp
src/logic/: api.h  app_logic.cpp  app_logic.h
src/main/: loader.cpp  loader.h  main.cpp
src/types/: generic.hxx  info.txt
